restart enhancements